--- a/SpendSense/Sidebar/styles.css
+++ b/SpendSense/Sidebar/styles.css
@@ -17,7 +17,7 @@ body {
   color: #fff;
   padding: 1rem;
   width: 250px;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .active {
@@ -45,101 +45,13 @@ body {
 }
 
 .dropdown-item:hover {
-  background-color: #677d7f;
+  background-color: #677d7f !important;
+  color: white !important;
 }
 
 .btnCustom {
   background-color: #293134 !important;
   color: white !important;
-}
-
-@keyframes slideInRight {
-  from {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes slideOutRight {
-  from {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  to {
-    opacity: 0;
-    transform: translateX(100%);
-  }
-}
-
-.alert-slide-in {
-  animation: slideInRight 0.4s ease-out forwards;
-}
-
-.alert-slide-out {
-  animation: slideOutRight 0.4s ease-in forwards;
-}
-
-.alert-timer-bar {
-  height: 4px;
-  background-color: black;
-  animation: shrinkBar linear forwards;
-}
-
-.btn-close.small {
-  width: 0.75rem;
-  height: 0.75rem;
-  padding: 0.25rem;
-  background-size: 0.75em;
-}
-
-@keyframes shrinkBar {
-  from {
-    width: 100%;
-  }
-  to {
-    width: 0%;
-  }
-}
-
-.modal {
-  z-index: 1045 !important;
-}
-
-.modal-backdrop {
-  z-index: 1040 !important;
-}
-
-#alert-container {
-  z-index: 1060 !important;
-}
-
-.alert {
-  z-index: 1060 !important;
-}
-
-.confirmation-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1061;
-}
-
-.confirm-box {
-  min-width: 300px;
-  max-width: 90%;
-  animation: slideInRight 0.4s ease-out;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1060 !important;
 }
 
 @media (max-width: 1000px) {
