--- a/SpendSense/Transactions/styles.css
+++ b/SpendSense/Transactions/styles.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap");
+
+html,
+body {
+  font-family: "Montserrat" !important;
+  height: 100%;
+  margin: 0;
+  background-color: #6a8b76 !important;
+}
+
 .btn {
   background-color: #293134 !important;
   color: white !important;
@@ -74,7 +84,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1060 !important;
+  z-index: 1055;
 }
 
 .confirm-box {
@@ -82,5 +92,4 @@
   max-width: 90%;
   animation: slideInRight 0.4s ease-out;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1060 !important;
 }
